Cleanup the mess that was 'vibe coded'
