# docs/schema/V1/swagger.verified.json
@@ -676,6 +676,10 @@
             "format": "guid",
             "type": "string"
           },
+          "isApiOnly": {
+            "description": "Indicates if this dialog is intended for API consumption only and should not be shown in frontends aimed at humans.",
+            "type": "boolean"
+          },
           "org": {
             "description": "The service owner code representing the organization (service owner) related to this dialog.",
             "example": "ske",
@@ -1306,6 +1310,10 @@
             "example": "01913cd5-784f-7d3b-abef-4c77b1f0972d",
             "format": "guid",
             "type": "string"
+          },
+          "isApiOnly": {
+            "description": "Indicates if this dialog is intended for API consumption only and should not be shown in frontends aimed at humans.\nWhen true, human-readable content like title and summary are not required.",
+            "type": "boolean"
           },
           "latestActivity": {
             "description": "The latest entry in the dialog\u0027s activity log.",
@@ -2358,6 +2366,7 @@
           },
           "content": {
             "description": "The dialog unstructured text content.",
+            "nullable": true,
             "oneOf": [
               {
                 "$ref": "#/components/schemas/V1ServiceOwnerDialogsCommandsCreate_Content"
@@ -2414,6 +2423,10 @@
             "description": "An optional key to ensure idempotency in dialog creation. If provided, it allows for the safe re-submission of the same dialog creation request without creating duplicate entries.",
             "nullable": true,
             "type": "string"
+          },
+          "isApiOnly": {
+            "description": "Indicates if this dialog is intended for API consumption only and should not be displayed in user interfaces.\nWhen true, the dialog will not be visible in portals designed for human users, but will remain accessible via API.",
+            "type": "boolean"
           },
           "party": {
             "description": "The party code representing the organization or person that the dialog belongs to in URN format.",
@@ -2586,6 +2599,7 @@
           },
           "content": {
             "description": "The transmission unstructured text content.",
+            "nullable": true,
             "oneOf": [
               {
                 "$ref": "#/components/schemas/V1ServiceOwnerDialogsCommandsCreate_TransmissionContent"
@@ -3038,6 +3052,7 @@
           },
           "content": {
             "description": "The dialog unstructured text content.",
+            "nullable": true,
             "oneOf": [
               {
                 "$ref": "#/components/schemas/V1ServiceOwnerDialogsCommandsUpdate_Content"
@@ -3075,6 +3090,10 @@
             },
             "nullable": true,
             "type": "array"
+          },
+          "isApiOnly": {
+            "description": "Indicates if this dialog is intended for API consumption only and should not be shown in frontends aimed at humans.\nWhen true, human-readable content like title and summary are not required.",
+            "type": "boolean"
           },
           "precedingProcess": {
             "description": "Optional preceding process identifier to indicate the business process that preceded the process indicated in the \u0022Process\u0022 field. Cannot be set without also \u0022Process\u0022 being set.",
@@ -3221,6 +3240,7 @@
           },
           "content": {
             "description": "The transmission unstructured text content.",
+            "nullable": true,
             "oneOf": [
               {
                 "$ref": "#/components/schemas/V1ServiceOwnerDialogsCommandsUpdate_TransmissionContent"
@@ -3511,6 +3531,7 @@
           },
           "content": {
             "description": "The dialog unstructured text content.",
+            "nullable": true,
             "oneOf": [
               {
                 "$ref": "#/components/schemas/V1ServiceOwnerDialogsQueriesGet_Content"
@@ -3571,6 +3592,10 @@
             "description": "An optional key to ensure idempotency in dialog creation. If provided, it allows for the safe re-submission of the same dialog creation request without creating duplicate entries.\n            ",
             "nullable": true,
             "type": "string"
+          },
+          "isApiOnly": {
+            "description": "Indicates if this dialog is intended for API consumption only and should not be shown in frontends aimed at humans.",
+            "type": "boolean"
           },
           "org": {
             "description": "The service owner code representing the organization (service owner) related to this dialog.",
@@ -4206,6 +4231,7 @@
         "properties": {
           "content": {
             "description": "The content of the dialog in search results.",
+            "nullable": true,
             "oneOf": [
               {
                 "$ref": "#/components/schemas/V1ServiceOwnerDialogsQueriesSearch_Content"
@@ -4252,6 +4278,10 @@
             "example": "01913cd5-784f-7d3b-abef-4c77b1f0972d",
             "format": "guid",
             "type": "string"
+          },
+          "isApiOnly": {
+            "description": "Indicates if this dialog is intended for API consumption only and should not be shown in frontends aimed at humans.",
+            "type": "boolean"
           },
           "latestActivity": {
             "description": "The latest entry in the dialog\u0027s activity log.",
@@ -4456,6 +4486,7 @@
           },
           "content": {
             "description": "The transmission unstructured text content.",
+            "nullable": true,
             "oneOf": [
               {
                 "$ref": "#/components/schemas/V1ServiceOwnerDialogsCommandsUpdate_TransmissionContent"
@@ -5101,6 +5132,15 @@
               "type": "array"
             },
             "style": "form"
+          },
+          {
+            "description": "Whether to include API-only dialogs in search results. \nIf false, dialogs marked with IsApiOnly=true will be excluded.\nDefaults to true.",
+            "in": "query",
+            "name": "includeApiOnly",
+            "schema": {
+              "nullable": true,
+              "type": "boolean"
+            }
           },
           {
             "description": "Search string for free text search. Will attempt to fuzzily match in all free text fields in the aggregate",
@@ -6003,6 +6043,15 @@
               "type": "array"
             },
             "style": "form"
+          },
+          {
+            "description": "Whether to include API-only dialogs in search results. \nIf false, dialogs marked with IsApiOnly=true will be excluded.\nDefaults to true.",
+            "in": "query",
+            "name": "includeApiOnly",
+            "schema": {
+              "nullable": true,
+              "type": "boolean"
+            }
           },
           {
             "description": "Search string for free text search. Will attempt to fuzzily match in all free text fields in the aggregate",
